<resources>
    <string name="app_name">StorigeRent</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Lastname">Lastname</string>
    <string name="Email">Email</string>
    <string name="Straat">Straat</string>
    <string name="Nr">Nr</string>
    <string name="Bus">Bus</string>
    <string name="Postcode">Postcode</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Street">Street</string>
    <string name="AddAdres">Add Persoon</string>
    <string name="Register">Register</string>
    <string name="Sign_up">Sign in</string>
    <string name="Edit_persoon">Edit Peroon</string>
    <string name="main_add">Add Storige</string>
    <string name="edit">Edit Storage</string>
    <string name="delete">Delete Storige</string>
    <string name="more">More</string>
    <string name="price">Price</string>
    <string name="scale">Scale</string>
    <string name="startdate">Startdate</string>
    <string name="enddate">Enddate</string>
    <string name="storige">Storage</string>
    <string name="Addstorig">Add Storage</string>
    <string name="Hirre" />
    <string name="Verhuurd">Renter</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="Size">Size(LxBxH)</string>
    <string name="Price">Price(€)</string>
    <string name="Hirred">Hirred</string>
    <string name="startdat">Start Date</string>
    <string name="enddat">End date</string>
    <string name="adres">Address</string>
    <string name="EditStorig">Edit Storage</string>
    <string name="seartch">Seartch</string>
    <string name="mogelijkheid">Type</string>
    <string name="nationalitijd">Nationality</string>
    <string name="Geslacht">Sex</string>
    <string name="GeboorteDatum">Birthdate</string>
    <string name="EditRent">Edit Renter</string>
    <string name="DeleteRent">Delete Renter</string>

    <array name="mogelijkheden">
        <item>Garage</item>
        <item>Opslag</item>
    </array>
    <string name="Rijksregisternr">National register</string>
</resources>
