<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"
                    android:id="@+id/textView"
                    android:textSize="20sp"
                    android:layout_column="0"
                    android:layout_span="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Name"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView1"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lastname"
                    android:id="@+id/textView3"
                    android:textSize="20dp"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Lastname"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView2"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:id="@+id/textView5"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Email"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rijksregisternr"
                    android:id="@+id/textView6"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/rnr"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView4"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationalitijd"
                    android:id="@+id/textView16"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Nationaliteit"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView5"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Geslacht"
                    android:id="@+id/textView18"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/geslacht"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView6"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GeboorteDatum"
                    android:id="@+id/textView19"
                    android:textIsSelectable="false"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/geboortedatum"
                    android:layout_weight="1"
                    android:hint="YYYY-MM-DD" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView7"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Street"
                    android:id="@+id/textView7"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Street"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView8"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nr"
                    android:id="@+id/textView9"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Nr"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView9"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bus"
                    android:id="@+id/textView11"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Bus"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView10"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Postcode"
                    android:id="@+id/textView13"
                    android:textIsSelectable="false"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Postcode"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView11"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/City"
                    android:id="@+id/textView15"
                    android:layout_column="0"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/City"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView12"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Country"
                    android:id="@+id/textView17"
                    android:layout_column="0"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Country"
                    android:layout_column="1"
                    android:textSize="20dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView13"
                    android:background="@android:drawable/ic_delete"
                    android:adjustViewBounds="false"
                    android:visibility="invisible" />
            </TableRow>



            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AddAdres"
                    android:id="@+id/AddAdres"
                    android:layout_column="0"
                    android:textSize="20dp"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
